--- a/css/menu.css
+++ b/css/menu.css
@@ -35,7 +35,7 @@
   position: relative;
   flex: none;
   width: 100%;
-  height: 2px;
+  height: 3px;
   background: #fff;
   display: flex;
   align-items: center;
@@ -51,7 +51,7 @@
   z-index: 1;
   top: -10px;
   width: 100%;
-  height: 2px;
+  height: 3px;
   background: inherit;
 }
 
@@ -136,7 +136,7 @@
 .menu-wrap .menu > div > div > ul > li > a {
   color: inherit;
   text-decoration: none;
-  transition: 0.5s ease-in;
+  transition: 0.5s ease;
 }
 
 .menu-wrap .menu > div > div > ul > li > a:hover {
