--- a/css/style.css
+++ b/css/style.css
@@ -66,10 +66,13 @@ body {
   color: #fff;
   padding: 0.75rem 1.5rem;
   margin-top: 1rem;
-  transition: all 1s ease-in-out;
+  transition: all 1s ease-in;
   text-decoration: none;
 }
 
 .btn:hover {
-  opacity: 0.7;
+  border-radius: 5px;
+  cursor: pointer;
+  opacity: 1;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
